fix: resolve Vite asset path issue

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -20,3 +20,6 @@ GOOGLE_CALLBACK_URL=http://localhost:8000/api/auth/google/callback
 # Frontend Configuration
 FRONTEND_ORIGIN=http://localhost:5173
 FRONTEND_GOOGLE_CALLBACK_URL=http://localhost:5173/google/callback
+
+# For Production, update FRONTEND_ORIGIN to your deployed frontend URL:
+# FRONTEND_ORIGIN=https://monkey-frontend.onrender.com
